--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 logging.level.com.kiran.demo.controller=trace
 logging.level.com.kiran.demo=debug
+logging.level.org.springframework.web=error
 
 logging.level.com.kiran.demo.=info
 
