Email Api Commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,16 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 logging.level.com.kiran.demo.controller=trace
 logging.level.com.kiran.demo=debug
-
 logging.level.com.kiran.demo.=info
-
 logging.file.name=bankingapp1.log
-
 # Logging pattern for the console
 logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
-
 #logging pattern for file
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=smileyy2524@gmail.com
+spring.mail.password=sxxwlldexhrmzyhe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
