--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+server.error.include-stacktrace=never
 
 logging.level.com.kiran.demo.controller=trace
 logging.level.com.kiran.demo=debug
